Activate Wake On Lan features for Ice Lake and Cannon Lake devices.

This is a direct commit to stable/10 as its not needed in -current.

PR:		228302
Submitted by:	Kaho Toshikazu <kaho@elam.kais.kyoto-u.ac.jp>